# groth16-soroban

./: README.md  inner_proof  inner_vk  inner_witness
contracts/groth16/: Cargo.toml
contracts/groth16/src/: errors.rs  groth15.rs  groth16.rs  groth16_test.rs  lib.rs  test.rs
