[package]
name = "groth16"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

num-bigint = "0.4.6"
sha2 = "0.10.8"
ark-bls12-381 = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
thiserror = "1.0.63"
hex = "0.4.3"
solana-bn254 = "2.2.2"


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
