[package]
name = "groth16"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }

ark-bls12-381 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }
ark-serialize = { version = "0.4.2", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
hex = "0.4.3"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
